--- a/442-laser/latex/spektrum_analysator.tex
+++ b/442-laser/latex/spektrum_analysator.tex
@@ -55,7 +55,7 @@ Die Abstände der nebeneinanderliegenden Moden wird berechnet und der mittlere A
 Das Verhältnis dieser beiden Abstände ist dann $q = \num{8(1)e-2}$
 
 
-Damit ergibt sich nach Gl. \eqref{eq:mode_frac} ein mittlerer Modenabstand der Lasermoden von $\Delta \nu_\text{Laser} = \SI{1.2(4)}{\mega\hertz}$.
+Damit ergibt sich nach Gl. \eqref{eq:mode_frac} ein mittlerer Modenabstand der Lasermoden von $\Delta \nu_\text{Laser} = \SI{1.2(4)e8}{\hertz}$.
 
 Es ist hierbei wichtig, dass das Verstärkungsprofil von Neon nur eine Breite von ca. $\SI{1.4}{\giga\hertz}$ \cite[19]{Versuchsanleitung442} aufweist (siehe Abschnitt \ref{sec:theorielaser}. Bei einem transversalen Modenabstand von $\Delta\nu = \frac{c}{2 L} \approx \SI{290}{\mega\hertz}$ der Transversalmoden des Lasers mit unseren Kavitätsdimensionen können niemals mehr als 5 solcher Moden in dem Vestärkungsprofil liegen und somit emittieren.
 
@@ -68,11 +68,18 @@ Die angeregten Transversalmoden sprechen für eine relativ schlechte Justage des
 \section{Spektrumanalysator}
 \label{sec:spectrumanalyzer}
 
-Nun wird der Modenabstand der Lasermoden mit einem Spektrumanalysator bestimmt. Hierzu wird ausgenutzt, dass die Lasermoden sich überlagern. Diese Überlagerung kann dargestellt werden als Summe von Cosinusfunktionen mit verschiedenen Frequenzen. Anwenden der hinlänglich bekannten Additionstheoreme zeigt, dass das gesamtsignal mit der Summe der Einzelfrequenzen, der Differenz der Einzelfrequenzen und mit den jeweiligen Einzelfrequenzen oszilliert. \cite{Versuchsanleitung442}
+Nun wird der Modenabstand der Lasermoden mit einem Spektrumanalysator bestimmt. Hierzu wird ausgenutzt, dass die Lasermoden sich überlagern. Diese Überlagerung kann dargestellt werden als Summe von Cosinusfunktionen mit verschiedenen Frequenzen. Anwenden der hinlänglich bekannten Additionstheoreme zeigt, dass das gesamtsignal mit der Summe der Einzelfrequenzen, der Differenz der Einzelfrequenzen und mit den jeweiligen Einzelfrequenzen oszilliert: \cite{Versuchsanleitung442}
+
+\begin{align}
+	E(t) &= E_1 \cdot \sin(\omega_1 t) + E_2 \cdot \sin(\omega_2 t)\\
+	\imply I(t) \propto \frac12 E_1^2 (1 - \cos(2 \omega_1 t)) + \frac12 E_2^2 \cos(\omega_2 t) - E_1 E_2 (\cos((\omega_1 + \omega_2) t) - \cos((\omega_1 - \omega_2) t))
+\end{align}
 
 Die Summe der Frequenzen, sowie die einzelnen Frequenzen sind im $\unit{\tera\hertz}$ Bereich und somit nicht als elektronische Signale übertragbar oder darstellbar. \cite{Versuchsanleitung442}
 
 Somit verbleibt nur die Differenzfrequenz, welche dann genau der Differenz zwischen zwei Lasermoden entspricht. Diese wird mit einer schnellen Photodiode gemessen und auf einem Spektrumanalysator der Firma RIGOL, des Typs DSA 815 dargestellt.
+
+Die verwendete Photodiode ist eine mit besonders schneller Reaktionszeit, was durch reduktion der parasitären Kapazität realisiert wird. Dadurch ist die empfindliche Fläche stark reduziert und es muss der Laser mit einer zusätzlichen Linse fokussiert werden um ein ausreichend starkes Signal zu erhalten.
 
 Hierbei musste der dargestellte Bereich recht klein um den Erwartungswert gewählt werden, um überhaupt eine Messung durchführen zu können. Der Messbereicht wurde auf eine Spanne von $\SI{10}{\mega\hertz}$ eingestellt, mit einer Mittelfrequenz von $\SI{290}{\mega\hertz}$. So wurde ein schmales Maximum bei $\SI{293.3(5)}{\mega\hertz}$ gefunden, wobei es eine FWHM\footnote{\textit{Full width half maximum}, deutsch: Volle Breite des halben Maximums} von etwa $\SI{1}{\mega\hertz}$ aufweist, woraus sich die Unsicherheit ergibt.
 
