--- a/442-laser/latex/waist.tex
+++ b/442-laser/latex/waist.tex
@@ -2,7 +2,7 @@
 
 \section{Theoretische Überlegungen}
 
-Ein reeller Laserstrahl in einem Resonator aus zwei Spiegeln kann als Gauß-Strahl beschrieben werden. Damit der Laser stabil ist, muss die Bedingung
+Ein reeller Laserstrahl in einem Resonator aus zwei Spiegeln kann als Gauß-Strahl beschrieben werden \cite[92]{Sigrist}. Damit der Laser stabil ist, muss die Bedingung
 \begin{align} \label{eq:resonatorstabilitaet}
 	0 \leq g_1 g_2 \leq 1
 \end{align}
