--- a/442-laser/latex/wellenlaenge.tex
+++ b/442-laser/latex/wellenlaenge.tex
@@ -4,7 +4,7 @@
 
 Um die tatsächliche Wellenlänge des Laserlichts zu bestimmen, eignet sich ein Gitter. Dabei wird der Laserstrahl genau parallel zur Gitternormalen
 auf ein Reflexions- oder Transmissionsgitter mit Spaltabstand d.h. Gitterkonstante $g$ eingestrahlt (Fall normalen Einfalls). Aus den Maxima des resultierenden Interferezmusters auf
-einem Schirm kann mithilfe der Bedingung für den Gangunterschied für konstruktive Interferenz $\delta = n \lambda$ mit $\lambda$ als Wellenlänge des Lasers die Gittergleichung aufgestellt werden:
+einem Schirm kann mithilfe der Bedingung für den Gangunterschied für konstruktive Interferenz $\delta = n \lambda$ mit $\lambda$ als Wellenlänge des Lasers die Gittergleichung aufgestellt werden \cite[308]{Demtroeder2}:
 \begin{align}
 	\label{eq:gitter}
 	m \lambda = g \cdot (sin(\alpha)+sin(\beta_m))
