error prop citation

--- a/442-laser/latex/wellenlaenge.tex
+++ b/442-laser/latex/wellenlaenge.tex
@@ -36,7 +36,7 @@ Um die Wellenlänge zu bestimmen, wurde im Experiment ein Transmissionsgitter di
 Dann wurde der Abstand zu einem Schirm gemessen sowie der Abstand der auf dem Schirm sichtbaren Maxima zum nicht-abgelenkten Maxima der 0.-ten Ordnung.
 Zum Messung der Abstände wurde ein Zollstock genutzt, aus dessen Skalenunterteilung der Fehler der Abstandsmessungen
 als $\Delta x=\SI{5}{\milli\meter}$ abgeschätzt wurde.
-Messunsicherheiten werden stets (sofern nicht explizit anders erwähnt) über gaußsche Fehlerfortpflanzung propagiert. \todo{cite}
+Messunsicherheiten werden stets (sofern nicht explizit anders erwähnt) über gaußsche Fehlerfortpflanzung propagiert. \cite[8-9]{gerthsen}
 Zur Reduktion von statistischen Fehlern durch eine größere Anzahl an Messwerten wurde die Messung für zwei verschiedene Gitter
 mit verschiedenen Gitterkonstanten ($500$ und $1000$ Striche pro $\unit{mm}$)
 jeweils dreimal durchgeführt.
