--- a/442-laser/latex/spektrum_analysator.tex
+++ b/442-laser/latex/spektrum_analysator.tex
@@ -72,17 +72,17 @@ Nun wird der Modenabstand der Lasermoden mit einem Spektrumanalysator bestimmt. 
 
 \begin{align}
 	E(t) &= E_1 \cdot \sin(\omega_1 t) + E_2 \cdot \sin(\omega_2 t)\\
-	\imply I(t) \propto \frac12 E_1^2 (1 - \cos(2 \omega_1 t)) + \frac12 E_2^2 \cos(\omega_2 t) - E_1 E_2 (\cos((\omega_1 + \omega_2) t) - \cos((\omega_1 - \omega_2) t))
+	\imply I(t) &\propto \frac12 E_1^2 (1 - \cos(2 \omega_1 t)) + \frac12 E_2^2 \cos(\omega_2 t) - E_1 E_2 (\cos((\omega_1 + \omega_2) t) - \cos((\omega_1 - \omega_2) t))
 \end{align}
 
 Die Summe der Frequenzen, sowie die einzelnen Frequenzen sind im $\unit{\tera\hertz}$ Bereich und somit nicht als elektronische Signale übertragbar oder darstellbar. \cite{Versuchsanleitung442}
 
-Somit verbleibt nur die Differenzfrequenz, welche dann genau der Differenz zwischen zwei Lasermoden entspricht. Diese wird mit einer schnellen Photodiode gemessen und auf einem Spektrumanalysator der Firma RIGOL, des Typs DSA 815 dargestellt.
+Somit verbleibt nur die Differenzfrequenz, welche dann genau der Differenz zwischen zwei Lasermoden entspricht. Diese wird mit einer schnellen Photodiode gemessen und auf einem Spektrumanalysator der Firma RIGOL des Typs DSA 815 dargestellt.
 
 Die verwendete Photodiode ist eine mit besonders schneller Reaktionszeit, was durch reduktion der parasitären Kapazität realisiert wird. Dadurch ist die empfindliche Fläche stark reduziert und es muss der Laser mit einer zusätzlichen Linse fokussiert werden um ein ausreichend starkes Signal zu erhalten.
 
 Hierbei musste der dargestellte Bereich recht klein um den Erwartungswert gewählt werden, um überhaupt eine Messung durchführen zu können. Der Messbereicht wurde auf eine Spanne von $\SI{10}{\mega\hertz}$ eingestellt, mit einer Mittelfrequenz von $\SI{290}{\mega\hertz}$. So wurde ein schmales Maximum bei $\SI{293.3(5)}{\mega\hertz}$ gefunden, wobei es eine FWHM\footnote{\textit{Full width half maximum}, deutsch: Volle Breite des halben Maximums} von etwa $\SI{1}{\mega\hertz}$ aufweist, woraus sich die Unsicherheit ergibt.
 
-Dies deckt sich sowohl mit dem theoretisch erwarteten Modenabstand als auch der (weit weniger genauen) Messung mit dem optischen Analysator.
 
+Dies deckt sich sowohl mit dem theoretisch erwarteten Modenabstand als auch der (weit weniger genauen) Messung mit dem optischen Analysator.
 Leider wurde nicht daran gedacht auch bei $\SI{145}{\mega\hertz}$ nach einer Differenzfrequenz zu suchen um die Hypothese der angeregten Transversalmoden zu prüfen.
