--- a/442-laser/latex/spektrum_analysator.tex
+++ b/442-laser/latex/spektrum_analysator.tex
@@ -81,7 +81,7 @@ Somit verbleibt nur die Differenzfrequenz, welche dann genau der Differenz zwisc
 
 Die verwendete Photodiode ist eine mit besonders schneller Reaktionszeit, was durch reduktion der parasitären Kapazität realisiert wird. Dadurch ist die empfindliche Fläche stark reduziert und es muss der Laser mit einer zusätzlichen Linse fokussiert werden um ein ausreichend starkes Signal zu erhalten.
 
-Hierbei musste der dargestellte Bereich recht klein um den Erwartungswert gewählt werden, um überhaupt eine Messung durchführen zu können. Der Messbereicht wurde auf eine Spanne von $\SI{10}{\mega\hertz}$ eingestellt, mit einer Mittelfrequenz von $\SI{290}{\mega\hertz}$. So wurde ein schmales Maximum bei $\SI{293.3(5)}{\mega\hertz}$ gefunden, wobei es eine FWHM\footnote{\textit{Full width half maximum}, deutsch: Volle Breite des halben Maximums} von etwa $\SI{1}{\mega\hertz}$ aufweist, woraus sich die Unsicherheit ergibt.
+Hierbei musste der dargestellte Bereich recht klein um den Erwartungswert gewählt werden, um überhaupt eine Messung durchführen zu können. Der Messbereich wurde auf eine Spanne von $\SI{10}{\mega\hertz}$ eingestellt, mit einer Mittelfrequenz von $\SI{290}{\mega\hertz}$. So wurde ein schmales Maximum bei $\SI{293.3(5)}{\mega\hertz}$ gefunden, wobei es eine FWHM\footnote{\textit{Full width half maximum}, deutsch: Volle Breite des halben Maximums} von etwa $\SI{1}{\mega\hertz}$ aufweist, woraus sich die Unsicherheit ergibt.
 
 
 Dies deckt sich sowohl mit dem theoretisch erwarteten Modenabstand als auch der (weit weniger genauen) Messung mit dem optischen Analysator.
