--- a/442-laser/latex/fazit.tex
+++ b/442-laser/latex/fazit.tex
@@ -8,4 +8,4 @@ Mithilfe eines Polarisators und einer Photodiode wurde anschließend der Polaris
 
 Die Modenabstände des Lasers wurden auf zwei Weisen untersucht; zunächst wurde ein optischer Analysator mit veränderlicher Länge genutzt um das Verhältnis der Modenabstände der Laserkavität und des externen Resonators zu bestimmen. Hierbei wurden weit mehr Lasermoden gefunden als in das Verstärkungsprofil von Neon passen. Daraus wurde gefolgert, dass in der Laserkavität nicht nur Longitudalmoden sondern auch Transversalmoden geschwungen haben. Der gefundene Modenabstand der Lasermoden war $\Delta \nu = \SI{1.2(4)}{\mega\hertz}$. Dieser Abstand liegt in einer $1\sigma$ Umgebung des erwarteten Abstandes von $\Delta\nu_\text{theo} \approx \SI{290}{\mega\hertz}$. Dies unterstützt weiter die Annahme, dass auch Transversalmoden schwingen. Die spricht für eine relativ schlechte Justage des Laseroszillators.
 
-Der Modenabstand wurde dann noch über einen Spektrumanalysator ermittelt. Hierbei wurde eine Differenzfrequenz von $\Delta\nu = \SI{293.3(5)}{\mega\hertz}$ gefunden. Diese ist konsistent mit dem Erwartungswert und - wenn Transversalmoden angeregt werden - mit dem des optischen Analysators.
+Der Modenabstand wurde dann noch über einen Spektrumanalysator ermittelt. Hierbei wurde eine Differenzfrequenz von $\Delta\nu = \SI{293.3(5)}{\mega\hertz}$ gefunden. Diese ist konsistent mit dem Erwartungswert $\Delta\nu_\text{theo} \approx \SI{290}{\mega\hertz}$ und - wenn Transversalmoden angeregt werden - mit dem des optischen Analysators.
