--- a/442-laser/latex/einleitung.tex
+++ b/442-laser/latex/einleitung.tex
@@ -26,7 +26,7 @@ Anschließend werden die Neonatome durch spontane Emission (inkohärentes Licht 
 (der Übergang in den Grundzustand kann nur so erfolgen, ein Übergang durch spontane Emission ist elektrisch verboten).
 Es können auch andere Laserübergänge erfolgen (siehe Termschema \ref{fig:lasertermschema.png}), durch dielektrische Beschichtungen der Resonatorspiegel werden diese im vorliegenden Aufbau jedoch von diesen absorbiert und entsprechend nicht (stark) im Laser verstärkt \cite[18-19,22]{Versuchsanleitung442}.
 Der Photonenstrahl wird durch die Spiegel des Resonators reflektiert und bei jedem Durchgang des aktiven Mediums, d.h. des HeNe-Gasgemischs (im Verhältnis 10:1), über stimulierte Emission verstärkt.
-An den Spiegeln wird schließelich bei jedem Resonatordurchlauf des Lichts ein großer Teil der Intensität reflektiert und ein geringer Teil aus dem Resonator ausgekoppelt \cite[41-42]{Sigrist} \todo{}.
+An den Spiegeln wird schließelich bei jedem Resonatordurchlauf des Lichts ein großer Teil der Intensität reflektiert und ein geringer Teil aus dem Resonator ausgekoppelt \cite[41-42]{Sigrist}.
 Die Moden eines konfokalen Resonators (also für zwei sphärische Spiegel mit $R_i=L$)) haben die Eigenfrequenzen \cite[11]{Versuchsanleitung442}:
 \begin{align}\label{eq:modes_konfokal}
 	\nu_{qmn}=\left(
