--- a/422-raster-tunnel-mikroskopie/latex/einleitung.tex
+++ b/422-raster-tunnel-mikroskopie/latex/einleitung.tex
@@ -1,3 +1,5 @@
 \chapter{Einleitung}
 
 \section{Versuchsziel}
+
+Rastertunnelmikroskopie ist eine wichtige Methode, um Strukturen zu untersuchen, die mit klassischen optischen Mikroskopen nicht aufgelöst werden können. Auch eine atomare Skala der Auflösung ist dabei erreichbar.
