processed folder and misc

--- a/422-raster-tunnel-mikroskopie/latex/main.tex
+++ b/422-raster-tunnel-mikroskopie/latex/main.tex
@@ -14,6 +14,11 @@
 
 
 \include{einleitung.tex}
+% hier set up & theorie RTM
+\include{gold.tex}
+% hier hopg
+% hier mos2
+% hier fazit
 
 
 \include{anhang.tex}
