now with two columns

--- a/422-raster-tunnel-mikroskopie/latex/gold.tex
+++ b/422-raster-tunnel-mikroskopie/latex/gold.tex
@@ -1,1 +1,26 @@
-\chapter{Untersuchung einer Goldprobe}
+\chapter{Untersuchung von Gold im RTM}
+
+Um die Funktionsweise des RTM im Bereich größer der atomaren Auflösung von Graphit-Gittern zu überprüfen, wird zunächst die Oberflächentopologie einer mit Gold bedampften Silizium- oder Saphir-Probe untersucht.
+
+\section{Theoretische Überlegungen}
+
+%insert stuff here
+
+\section{Experimenteller Aufbau}
+%wenn noch etwas anderes als bei generellem Aufbau hier
+
+
+Es werden zwei Goldproben mit dem RTM untersucht. Hierbei wird nicht direkt Gold untersucht, welches aufgrund seiner kristallinen Struktur aus elektrisch gleichberechtigten Elektronen \todo{Reference und mehr Info zu Struktur von Gold va in RTM-Aufnahmen} isoliert zu keinen aufschlussreichen Aufnahmen führen würde. Stattdessen werden Proben von Silizium bzw. Saphir verwendet, auf welche Gold aufgedampft wurde, mit anschließendem Erhitzen \todo{was tut das erhitzen?}.
+
+Auf der glatten Si- oder Saphir-Oberfläche sind so kleine Goldkügelchen ohne festes Muster angeordnet. Sie sollten so bei supra-atomaren Auflösungen des Mikroskops gut sichtbar sein. Eine atomare Auflösung ist bei diesen Proben auch nicht sinnvoll, da Gold, wie genannt, sehr gleichmäßige Elektronenverteilungen aufweist \todo{fact check this} und so keine deutlichen Strukturen innerhalb des Kristallgitters erkennbar sein würden.
+
+Da die Goldproben durch die unvorhersehbar verteilten Goldkügelchen hohe Korrugation aufweisen, wird im Folgenden das RTM immer im \textit{constant current}-Modus betrieben. Die Parameter des Regelkreises waren dabei auf $P=1000, I=2000$ eingestellt. Eine Aufnahme im \textit{constant height}-Modus hätte eine ausreichend große ebene Fläche erfordert, was bei den Goldproben zu keinen interessanten Ergebnissen geführt hätte. Es war zu erwarten, dass die Goldkügelchen, die sich physisch erhöht auf der Oberfläche des Basismaterials befinden, auch im Höhenbild (Verlauf der Spitzenhöhe als \textit{z-Höhe}) als größere, für sich relativ homogene Strukturen erhöht erscheinen würde, während die Lücken zwischen ihnen aufgrund ihrer deutlich geringere Elektronenaufenthaltswahrscheinlichkeiten (also niedrigeren Tunnelstrom) zu niedrigeren Spitzenposition (z-Werte) führen würden. Die relativ (zur atomaren Größenordnung $\mathcal{O}(\SI{e-10}{\meter}=\unit{\AA})$) großen Kügelchen sollten deutlich als mehr oder weniger zufällig über das Basismaterial verteilt sichtbar werden.
+\todo{citations needed}
+
+Es wurden die beiden Goldproben (Probe 1: Nummer 16, Probe 2: Nummer 14) nacheinander mit dem RTF untersucht.
+
+%anmerkungen zum messprozess
+
+\section{Messergebnisse}
+
+\section{Auswertung}
