--- a/422-raster-tunnel-mikroskopie/latex/einleitung.tex
+++ b/422-raster-tunnel-mikroskopie/latex/einleitung.tex
@@ -2,4 +2,7 @@
 
 \section{Versuchsziel}
 
-Rastertunnelmikroskopie ist eine wichtige Methode, um Strukturen zu untersuchen, die mit klassischen optischen Mikroskopen nicht aufgelöst werden können. Auch eine atomare Skala der Auflösung ist dabei erreichbar.
+Rastertunnelmikroskopie ist eine wichtige Methode, um Strukturen zu untersuchen, die mit klassischen optischen Mikroskopen nicht aufgelöst werden können. Auch eine atomare Skala der Auflösung ist dabei erreichbar \cite[2]{Versuchsanleitung422}.
+In dem Versuch wird ein Rastertunnelmikroskop (RTM) genutzt, um die Oberflächentopologie und damit die Kristallstruktur von auf Saphir oder Silizium aufgedampften Goldkügelchen und anschließend von hochgeordneten pyrolytischem Graphit (HOPG) zu untersuchen und letzteres auch auf atomarer Skala aufzulösen \cite[1]{Versuchsanleitung422}. Außerdem wird auch die Oberflächenstruktur von Molybdändisulfid (\moszwei) mit dem RTM untersucht.
+
+\section{Funktionsweise eines RTM}
