--- a/422-raster-tunnel-mikroskopie/latex/references.bib
+++ b/422-raster-tunnel-mikroskopie/latex/references.bib
@@ -13,6 +13,14 @@
     urldate = {2025-11-21},
 }
 
+@online{Versuchsanleitung422,
+    title = {Versuchsbeschreibung P422: Rastertunnelmikroskopie},
+    organization = {Physikalisches Institut, Universität Bonn},
+    url = {https://uni-bonn.sciebo.de/s/OFYPwvfOVjkYhBE},
+    urldate = {2025-12-04},
+
+}
+
 @book{HakenWolf2013,
 title = {Atom- und Quantenphysik: Einführung in die experimentellen und theoretischen Grundlagen},
 year = {2013},
