--- a/422-raster-tunnel-mikroskopie/latex/einleitung.tex
+++ b/422-raster-tunnel-mikroskopie/latex/einleitung.tex
@@ -6,3 +6,28 @@ Rastertunnelmikroskopie ist eine wichtige Methode, um Strukturen zu untersuchen,
 In dem Versuch wird ein Rastertunnelmikroskop (RTM) genutzt, um die Oberflächentopologie und damit die Kristallstruktur von auf Saphir oder Silizium aufgedampften Goldkügelchen und anschließend von hochgeordneten pyrolytischem Graphit (HOPG) zu untersuchen und letzteres auch auf atomarer Skala aufzulösen \cite[1]{Versuchsanleitung422}. Außerdem wird auch die Oberflächenstruktur von Molybdändisulfid (\moszwei) mit dem RTM untersucht.
 
 \section{Funktionsweise eines RTM}
+
+Grundsätzlich nutzt ein RTM den quantenmechanischen Tunneleffekt, sowie feine Positionierung über Piezokristalle, aus um die Oberfläche einer Probe mit einer atomar dünnen Spitze abzurastern und Daten über ihre Struktur zu messen.
+
+\subsection{Tunnelstrom}
+Bei quantenmechanischer Betrachtung können Teilchen durch Potentialbarrieren Tunneln, die bei klassischer Betrachtung das Teilchen stoppen sollten. \todo{cite this}
+
+\subsection{Piezoeffekt}
+Der Piezoeffekt beschreibt den Zusammenhang zwischen elektrischer Spannung und Verformung von Materialien mit polaren Achsen.
+Dieser Zusammenhang ist näherungsweise linear;
+
+\begin{align}
+	\Delta x = \delta U 
+\end{align}
+
+Dieser Effekt ist in der Größenordnung von $10^{-11} - 10^{-9} \unit{\meter\per\volt}$ und erlaubt somit relativ einfach Positionsregelung auf atomaren Größenskalen. \cite[339-341]{gerthsen}
+
+
+\subsection{Regelkreis}
+Der Abstand der Spitze über der Probe muss geregelt werden, damit der Abstand stets klein genug ist, damit ein messbarer Tunnelstrom fließt ohne jedoch die Probe zu berühren und so potentiell die Spitze zu zerstören.
+
+Zu diesem Zweck wird eine PID-Schleife verwendet. Dies ist eine in der Regelungstechnik übliche Art, ein System zu regeln, so dass es sich möglichst effizient einem Sollpunkt annährt. \todo{cite}
+
+\todo{macht es Sinn hier die Standardform der PID Regelgleichung hinzupacken und zu erläutern??}
+
+Wird der Proportionalfakor auf Null gesetzt und die Integrationszeit sehr lang gewählt, folgt die Spitze nur noch der generellen Tendenz oder Schieflage der Oberfläche, nicht mehr aber Unebenheiten. Dies entspricht dem Wechsel vom konstanten Strom Modus (CCM) zum konstanten Höhen Modus (CHM). \cite{Versuchsanleitung422}
