found some nice sources

--- a/422-raster-tunnel-mikroskopie/latex/einleitung.tex
+++ b/422-raster-tunnel-mikroskopie/latex/einleitung.tex
@@ -6,11 +6,21 @@ Rastertunnelmikroskopie ist eine wichtige Methode, um Strukturen zu untersuchen,
 In dem Versuch wird ein Rastertunnelmikroskop (RTM) genutzt, um die Oberflächentopologie und damit die Kristallstruktur von auf Saphir oder Silizium aufgedampften Goldkügelchen und anschließend von hochgeordneten pyrolytischem Graphit (HOPG) zu untersuchen und letzteres auch auf atomarer Skala aufzulösen \cite[1]{Versuchsanleitung422}. Außerdem wird auch die Oberflächenstruktur von Molybdändisulfid (\moszwei) mit dem RTM untersucht.
 
 \section{Funktionsweise eines RTM}
-
 Grundsätzlich nutzt ein RTM den quantenmechanischen Tunneleffekt, sowie feine Positionierung über Piezokristalle, aus um die Oberfläche einer Probe mit einer atomar dünnen Spitze abzurastern und Daten über ihre Struktur zu messen.
+
 
 \subsection{Tunnelstrom}
 Bei quantenmechanischer Betrachtung können Teilchen durch Potentialbarrieren Tunneln, die bei klassischer Betrachtung das Teilchen stoppen sollten. \todo{cite this}
+
+
+Der Resultierende Tunnelstrom ist hängt exponentiell vom Abstand ab und ist sehr empfindlich bei Änderungen in den Größenordnungen weniger Angström. Es gilt die folgende Proportionalität:\cite{binnigSTM}
+
+\begin{align}
+	I \propto U_T \exp(-A \Phi^{1/2} z)
+\end{align}
+
+Wobei 
+
 
 \subsection{Piezoeffekt}
 Der Piezoeffekt beschreibt den Zusammenhang zwischen elektrischer Spannung und Verformung von Materialien mit polaren Achsen.
