--- a/422-raster-tunnel-mikroskopie/latex/references.bib
+++ b/422-raster-tunnel-mikroskopie/latex/references.bib
@@ -176,3 +176,19 @@ url = {https://www.physics.nist.gov/PhysRefData/Handbook/Tables/xenontable2.htm}
     doi = {10.1007/978-3-662-57515-4},
 
 }
+
+
+@article{STMtheory,
+    author = {J. Tersoff, D. R. Hamann},
+    title = {Theory of the scanning tunneling microscope},
+    doiurl = {https://doi.org/10.1103/PhysRevB.31.805},
+    journal = {Physical Review B},
+    volume = {31}
+}
+
+@article{binnigSTM,
+    author = {G. Binnig, H. Rohrer},
+    journal = {Surface Science},
+    volume = {126},
+    doiurl = {https://doi.org/10.1016/0039-6028(83)90716-1},
+}
