now with comments

--- a/422-raster-tunnel-mikroskopie/latex/einleitung.tex
+++ b/422-raster-tunnel-mikroskopie/latex/einleitung.tex
@@ -6,3 +6,8 @@ Rastertunnelmikroskopie ist eine wichtige Methode, um Strukturen zu untersuchen,
 In dem Versuch wird ein Rastertunnelmikroskop (RTM) genutzt, um die Oberflächentopologie und damit die Kristallstruktur von auf Saphir oder Silizium aufgedampften Goldkügelchen und anschließend von hochgeordneten pyrolytischem Graphit (HOPG) zu untersuchen und letzteres auch auf atomarer Skala aufzulösen \cite[1]{Versuchsanleitung422}. Außerdem wird auch die Oberflächenstruktur von Molybdändisulfid (\moszwei) mit dem RTM untersucht.
 
 \section{Funktionsweise eines RTM}
+
+\subsection{Tunneleffekt}
+\subsection{Piezoelemente}
+\subsection{Regelkreis (PID)}
+\subsection{Betriebsmodi}
