--- a/422-raster-tunnel-mikroskopie/latex/einleitung.tex
+++ b/422-raster-tunnel-mikroskopie/latex/einleitung.tex
@@ -7,6 +7,8 @@ In dem Versuch wird ein Rastertunnelmikroskop (RTM) genutzt, um die Oberflächen
 
 \section{Funktionsweise eines RTM}
 
+Rastertunnelmikroskopie nutzt das Phänomen des messbaren, ortsabhängigen Elektronenstroms (Tunnelstrom)zwischen einer elektrisch leitfähigen Oberfläche einer Probe und einer feiner Metallspitze, wenn diese in einem kleinen Abstand $z$ über die Oberfläche bewegt wird. Dabei wird die Bewegung der Spitze über die Probe als Rasterbewegung in der x-y-Ebene vorgenommen und die Höhe $z>0$ und der Tunnelstrom $I_T$ für jeden Rasterpunkt (Pixel des entstehenden Bildes) gemessen. Dabei ist wichtig festzustellen, dass in der klassischen Betrachtung überhaupt kein Elektronenstrom erwartet wird, da Elektronen aus leitfähigen Materialien, mit Energien unterhalb des Betrags einer Potentialbarriere $E_\text{e} < V$ sich niemals innerhalb oder hinter der Barriere aufhalten können. In der quantenmechanischen Betrachtung von Elektronen als Wellenfunktion gibt es jedoch eine nichtverschwindene Wahrscheinlichkeit, dass sich ein Elektron auch im Bereich der Barriere oder dahinter aufhält. Dazu
+
 \subsection{Tunneleffekt}
 \subsection{Piezoelemente}
 \subsection{Regelkreis (PID)}
