--- a/422-raster-tunnel-mikroskopie/latex/references.bib
+++ b/422-raster-tunnel-mikroskopie/latex/references.bib
@@ -176,3 +176,14 @@ url = {https://www.physics.nist.gov/PhysRefData/Handbook/Tables/xenontable2.htm}
     doi = {10.1007/978-3-662-57515-4},
 
 }
+
+
+@online{TUDrtmskript,
+    author = {Florian Neuberger and Benjamin Waldschmidt},
+    organization = {Eduard-Zinti-Institut, Fachbereich Chemie, Technische Universität Darmstadt},
+    year = {2018},
+    url = {https://www.chemie.tu-darmstadt.de/media/arbeitsgruppe_schaefer/versuchsskripte/PCF-ScanningTunnelingMicroscopy.pdf},
+    urldate = {2025-12-05},
+    title = {Skript zum Versuch
+    Rastertunnelmikroskopie}
+}
