converted pics, wrote some stuff

--- a/422-raster-tunnel-mikroskopie/latex/einleitung.tex
+++ b/422-raster-tunnel-mikroskopie/latex/einleitung.tex
@@ -10,7 +10,7 @@ Grundsätzlich nutzt ein RTM den quantenmechanischen Tunneleffekt, sowie feine P
 
 
 \subsection{Tunnelstrom}
-Bei quantenmechanischer Betrachtung können Teilchen durch Potentialbarrieren Tunneln, die bei klassischer Betrachtung das Teilchen stoppen sollten. \todo{cite this}
+Bei quantenmechanischer Betrachtung können Teilchen durch Potentialbarrieren Tunneln, die bei klassischer Betrachtung das Teilchen stoppen sollten. \cite[707-709]{gerthsen}
 
 
 Der Resultierende Tunnelstrom ist hängt exponentiell vom Abstand ab und ist sehr empfindlich bei Änderungen in den Größenordnungen weniger Angström. Es gilt die folgende Proportionalität:\cite{binnigSTM}
@@ -19,7 +19,7 @@ Der Resultierende Tunnelstrom ist hängt exponentiell vom Abstand ab und ist seh
 	I \propto U_T \exp(-A \Phi^{1/2} z)
 \end{align}
 
-Wobei 
+Wobei z der Abstand von Spitze zu Probe darstellt. \todo{geschlossene form für Strom. ggf gerthsen S.708/709}
 
 
 \subsection{Piezoeffekt}
