--- a/422-raster-tunnel-mikroskopie/latex/references.bib
+++ b/422-raster-tunnel-mikroskopie/latex/references.bib
@@ -178,17 +178,6 @@ url = {https://www.physics.nist.gov/PhysRefData/Handbook/Tables/xenontable2.htm}
 }
 
 
-@online{TUDrtmskript,
-    author = {Florian Neuberger and Benjamin Waldschmidt},
-    organization = {Eduard-Zinti-Institut, Fachbereich Chemie, Technische Universität Darmstadt},
-    year = {2018},
-    url = {https://www.chemie.tu-darmstadt.de/media/arbeitsgruppe_schaefer/versuchsskripte/PCF-ScanningTunnelingMicroscopy.pdf},
-    urldate = {2025-12-05},
-    title = {Skript zum Versuch
-    Rastertunnelmikroskopie}
-
-}
-
 @article{STMtheory,
     author = {J. Tersoff, D. R. Hamann},
     title = {Theory of the scanning tunneling microscope},
@@ -202,4 +191,16 @@ url = {https://www.physics.nist.gov/PhysRefData/Handbook/Tables/xenontable2.htm}
     journal = {Surface Science},
     volume = {126},
     doiurl = {https://doi.org/10.1016/0039-6028(83)90716-1},
+}
+
+@article{STMrohrer,
+    title = {Surface Studies by Scanning Tunneling Microscopy},
+     author = {Binnig, G. and Rohrer, H. and Gerber, Ch. and Weibel, E.},
+     journal = {Phys. Rev. Lett.},
+     volume = {49},
+     issue = {1},
+     pages = {57--61},
+     year = {1982},
+     doi = {10.1103/PhysRevLett.49.57},
+     url = {https://link.aps.org/doi/10.1103/PhysRevLett.49.57}
 }
