now w clickable link

--- a/422-raster-tunnel-mikroskopie/latex/gold.tex
+++ b/422-raster-tunnel-mikroskopie/latex/gold.tex
@@ -10,7 +10,7 @@ Um die Funktionsweise des RTM im Bereich größer der atomaren Auflösung von Gr
 %wenn noch etwas anderes als bei generellem Aufbau hier
 
 
-Es werden zwei Goldproben mit dem RTM untersucht. Hierbei wird nicht direkt Gold untersucht, welches aufgrund seiner elektrisch relativ flachen kristallinen Struktur  isoliert zu nur wenige kontrastreichen Aufnahmen führen würde \cite[59-60]{STMrohrer}. Stattdessen werden Proben von Silizium bzw. Saphir verwendet, auf welche Gold aufgedampft wurde \cite[13]{Versuchanleitung422}.
+Es werden zwei Goldproben mit dem RTM untersucht. Hierbei wird nicht direkt Gold untersucht, welches aufgrund seiner elektrisch relativ flachen kristallinen Struktur isoliert zu nur wenige kontrastreichen Aufnahmen führen würde \cite[59-60]{STMrohrer}. Stattdessen werden Proben von Silizium bzw. Saphir verwendet, auf welche Gold aufgedampft wurde \cite[13]{Versuchsanleitung422}.
 
 Auf der glatten Si- oder Saphir-Oberfläche sind so kleine Goldkügelchen ohne festes Muster angeordnet. Sie sollten so bei supra-atomaren Auflösungen des Mikroskops gut sichtbar sein. Eine atomare Auflösung ist bei diesen Proben auch nicht sinnvoll, da Gold, wie genannt, sehr gleichmäßige Elektronenverteilungen aufweist und so keine deutlichen Strukturen innerhalb des Kristallgitters erkennbar sein würden. Durch den Erhitzungsprozess kann allerdings damit gerechnet werden, dass die Goldkügelchen in ihrer Oberfläche stufenförmige Strukturen aufweisen anstatt vollständig glatt zu sein, allerdings ist die Ausprägung der Stufen stark von der erreichten Temperatur während des Erhitzens abhängig \cite[59]{STMrohrer}.
 
