--- a/422-raster-tunnel-mikroskopie/latex/references.bib
+++ b/422-raster-tunnel-mikroskopie/latex/references.bib
@@ -188,8 +188,13 @@ url = {https://www.physics.nist.gov/PhysRefData/Handbook/Tables/xenontable2.htm}
 
 @article{binnigSTM,
     author = {G. Binnig, H. Rohrer},
+    title = {Scanning tunneling microscopy},
     journal = {Surface Science},
     volume = {126},
+    number = {1},
+    pages = {236-244},
+    year = {1983},
+    doi = {https://doi.org/10.1016/0039-6028(83)90716-1},
     doiurl = {https://doi.org/10.1016/0039-6028(83)90716-1},
 }
 
