--- a/422-raster-tunnel-mikroskopie/latex/hopg.tex
+++ b/422-raster-tunnel-mikroskopie/latex/hopg.tex
@@ -1,7 +1,11 @@
 \chapter{Highly Ordered Pyrolitic Graphite (HOPG)}
-\todo{Kristallstruktur}
-\todo{Bindungen zwischen Ebenen} 
-\todo{Messbare Elektronen}
+
+Highly ordered Pyrolitic Graphite (HOPG) ist ein Kristall, bestehend aus Schichten von jeweils hexagonal angeordneten Kohlenstoffatomen. Die Schichten sind zueinander verschoben, so dass jeweils die Hälfte der Kohlenstoffatome über solchen aus der nächsten Lage liegen und die andere Hälfte über entsprechenden Hohlstellen. Dies ist skizziert in Abbildung \todo{abbildung} \todo{cite}.
+
+Die Schichten zueinander sind nur schwach über Van-der-Vaals Kräfte gebunden, innerhalb der Brücken sind die Kohlenstoffatome kovalent, also deutlich stärker gebunden \todo{cite}. Dies wird beim Vorbereiten der Probe ausgenutzt, da es erlaubt, ganze schichten relativ leicht abzulösen während diese in sich in Takt bleiben.
+
+Die Verschiebung der Schichten zueinander führt dazu, dass jedes zweite Elektron an die darunterliegende Schicht gebunden ist, während die übrigen keine Bindung zu dieser haben. Dies führt durch verschobene Elektronenorbitale, der an die untere Schicht gebundenen Elektronen, dafür, dass diese Elektronen weit weniger Messbar sind. In Folge dessen wird mit dem STM nur jedes zweite Elektron gemessen. Diese haben dann theoretisch einen Abstand von $d = \SI{0.246}{\nano\meter}$ und bilden gleichseitige Dreiecke \cite{Versuchsanleitung422}.
+
 
 \section{Durchführung}
 Die HOPG Probe wird zunächst unter dem USB Mikroskop dokumentiert (siehe \ref{fig:HOPG_optisch})
@@ -17,4 +21,4 @@ Nun werden Aufnahmen mit atomarer Auflösung hergestellt (siehe \ref{fig:res/hop
 
 \section{Auswertung}
 
-\jafps{res/hopg_166}{hopg go brr}{0.45}
+\jafps{res/hopg_166}{\todo{scanspeed}}{0.4}
