--- a/422-raster-tunnel-mikroskopie/latex/hopg.tex
+++ b/422-raster-tunnel-mikroskopie/latex/hopg.tex
@@ -13,12 +13,14 @@ Die HOPG Probe wird zunächst unter dem USB Mikroskop dokumentiert (siehe \ref{f
 
 Anschließend wird die Probe vorbereitet in dem ein Stück Tesa Film auf die Probe geklebt und dann abgezogen wurde. Dies sorgt dafür, dass eine Frische, unverschmutzte Graphitschicht freigelegt wird.
 Es wird zunächst im CCM ein $\SI{200}{\nano\meter} \times \SI{200}{\nano\meter}$ STM Bild \ref{fig:res/hopg_131} aufgenommen und eine geeignete Flache Stelle gesucht.
-\jafps{res/hopg_131}{Übersichtsaufnahme der Graphitoberfläche im konstanten Strom Modus \todo{scanspeed}}{0.45}
+\jafps{res/hopg_131}{Übersichtsaufnahme der Graphitoberfläche im konstanten Strom Modus \todo{scanspeed}}{0.4}
 
 In der unteren linken Hälfte der Aufnahme \ref{fig:res/hopg_131} fand sich eine Stufe, ansonsten wird die Oberfläche als eben identifiziert. Es wird im weiteren ein Ausschnitt in der rechten oberen Hälfte von Abbildung \ref{fig:res/hopg_131} genutzt. Schrittweise wird der Ausschnitt verkleinert und im CCM die Glätte des Ausschnitts verifiziert. Bei einer Größe von $\SI{4}{\nano\meter} \times \SI{4}{\nano\meter}$ wird anschließend auf den konstanten Höhen Modus (CHM) gewechselt, in dem die Konstante P auf 0 und I auf 4 gesetzt werden.
 
 Nun werden Aufnahmen mit atomarer Auflösung hergestellt (siehe \ref{fig:res/hopg_166}).
 
 \section{Auswertung}
+
+In den Aufnahmen erwarten wir gemäß \todo{refrence graphic}, ein Muster gleichseitigen Dreiecken mit Seitenlänge $\SI{0.246}{\nano\meter}$. Eine gelungene Aufnahme wird nun genutzt um dort den Abstand mehrerer Maxima zueinander zu vermessen.
 
 \jafps{res/hopg_166}{\todo{scanspeed}}{0.4}
