--- a/422-raster-tunnel-mikroskopie/latex/hopg.tex
+++ b/422-raster-tunnel-mikroskopie/latex/hopg.tex
@@ -23,4 +23,26 @@ Nun werden Aufnahmen mit atomarer Auflösung hergestellt (siehe \ref{fig:res/hop
 
 In den Aufnahmen erwarten wir gemäß \todo{refrence graphic}, ein Muster gleichseitigen Dreiecken mit Seitenlänge $\SI{0.246}{\nano\meter}$. Eine gelungene Aufnahme wird nun genutzt um dort den Abstand mehrerer Maxima zueinander zu vermessen.
 
-\jafps{res/hopg_166}{\todo{scanspeed}}{0.4}
+% \jafps{res/hopg_166}{\todo{scanspeed}}{0.4}
+\jafps{res/hopg_166_with_lines}{\todo{scanspeed}}{0.4}
+
+
+Zum besseren Mitteln wurde jeweils der Abstand von fünf Maxima bestimmt. Außerdem werden die Winkel der Linien in denen die Maxima liegen vermessen.
+
+\begin{table}
+\centering
+\begin{tabular}{|c|c|c|}
+\hline
+Index & $\varphi / \unit{\degree}$ & Länge $L / \unit{\pico\meter}$ \\
+\hline
+1 & $\num{161.1(5)}$ & $\num{1236.0(5)}$ \\
+2 & $\num{161.8(5)}$ & $\num{1261.7(5)}$ \\
+3 & $\num{39.5(5)}$ & $\num{1256.8(5)}$ \\
+4 & $\num{40.2(5)}$ & $\num{1260.6(5)}$ \\
+5 & $\num{39.4(5)}$ & $\num{1293.7(5)}$ \\
+6 & $\num{160.3(5)}$ & $\num{1257.3(5)}$ \\
+\hline
+\end{tabular}
+\caption{Längen und Winkel relativ zur horizontalen der in \ref{fig:res/hopg_166_with_lines} markierten Linien.}
+\label{tab:hopg_measure}
+\end{table}
