--- a/422-raster-tunnel-mikroskopie/latex/hopg.tex
+++ b/422-raster-tunnel-mikroskopie/latex/hopg.tex
@@ -21,7 +21,7 @@ Nun werden Aufnahmen mit atomarer Auflösung hergestellt (siehe \ref{fig:res/hop
 
 \section{Auswertung}
 
-In den Aufnahmen erwarten wir gemäß \todo{refrence graphic}, ein Muster gleichseitigen Dreiecken mit Seitenlänge $\SI{0.246}{\nano\meter}$. Eine gelungene Aufnahme wird nun genutzt um dort den Abstand mehrerer Maxima zueinander zu vermessen.
+In den Aufnahmen erwarten wir gemäß \todo{refrence graphic}, ein Muster gleichseitigen Dreiecken mit Seitenlänge $\SI{0.246}{\nano\meter}$. Eine gelungene Aufnahme wird nun genutzt um dort den Abstand mehrerer Maxima zueinander zu vermessen. Hierzu wurde die Mess-Funktionalität von gwyddion\todo{cite} verwendet.
 
 % \jafps{res/hopg_166}{\todo{scanspeed}}{0.4}
 \jafps{res/hopg_166_with_lines}{\todo{scanspeed}}{0.4}
@@ -37,12 +37,15 @@ Index & $\varphi / \unit{\degree}$ & Länge $L / \unit{\pico\meter}$ \\
 \hline
 1 & $\num{161.1(5)}$ & $\num{1236.0(5)}$ \\
 2 & $\num{161.8(5)}$ & $\num{1261.7(5)}$ \\
+6 & $\num{160.3(5)}$ & $\num{1257.3(5)}$ \\
+\hline
 3 & $\num{39.5(5)}$ & $\num{1256.8(5)}$ \\
 4 & $\num{40.2(5)}$ & $\num{1260.6(5)}$ \\
 5 & $\num{39.4(5)}$ & $\num{1293.7(5)}$ \\
-6 & $\num{160.3(5)}$ & $\num{1257.3(5)}$ \\
 \hline
 \end{tabular}
-\caption{Längen und Winkel relativ zur horizontalen der in \ref{fig:res/hopg_166_with_lines} markierten Linien.}
+\caption{Längen und Winkel relativ zur horizontalen der in \ref{fig:res/hopg_166_with_lines} markierten Linien. Die Unsicherheiten ergeben sich aus der Ausdehnung der Maxima.}
 \label{tab:hopg_measure}
 \end{table}
+
+Die Werte in Tabelle \ref{tab:hopg_measure} lassen sich in zwei Gruppen aufspalten, die den zwei Richtungen entsprechen, in denen die Kohlenstoffatome in Reihen liegen. Für jede Richtung wird jetzt der Mittelwert des Abstands zwischen je zwei Maxima berechnet, die Unsicherheit wird mittels Gaußscher Fehlerfortpflanzung berechnet\cite[8-9]{gerthsen}. Es ergibt sich für die erste Richtung (repräsentiert durch die Linien 1, 2, 6) ein Mittlerer Winkel von $\varphi_1 = \SI{161.1(3)}{\degree}$ und ein Abstand von $L_1 = \SI{250.3(1)}{\pico\meter}$. Die selben Berechnungen für die zweite Gruppe (aus Linie 3, 4 und 5) ergeben $\varphi_2 = \SI{39.7(3)}{\degree}$ und $L_2 = \SI{254.1(1)}{\pico\meter}$.
