hopg hopping along nicely

--- a/422-raster-tunnel-mikroskopie/latex/hopg.tex
+++ b/422-raster-tunnel-mikroskopie/latex/hopg.tex
@@ -49,3 +49,8 @@ Index & $\varphi / \unit{\degree}$ & Länge $L / \unit{\pico\meter}$ \\
 \end{table}
 
 Die Werte in Tabelle \ref{tab:hopg_measure} lassen sich in zwei Gruppen aufspalten, die den zwei Richtungen entsprechen, in denen die Kohlenstoffatome in Reihen liegen. Für jede Richtung wird jetzt der Mittelwert des Abstands zwischen je zwei Maxima berechnet, die Unsicherheit wird mittels Gaußscher Fehlerfortpflanzung berechnet\cite[8-9]{gerthsen}. Es ergibt sich für die erste Richtung (repräsentiert durch die Linien 1, 2, 6) ein Mittlerer Winkel von $\varphi_1 = \SI{161.1(3)}{\degree}$ und ein Abstand von $L_1 = \SI{250.3(1)}{\pico\meter}$. Die selben Berechnungen für die zweite Gruppe (aus Linie 3, 4 und 5) ergeben $\varphi_2 = \SI{39.7(3)}{\degree}$ und $L_2 = \SI{254.1(1)}{\pico\meter}$.
+Die beiden Abstände $L_1$ und $L_2$ liegen jeweils einige $\unit{\pico\meter}$ über dem Erwartungswert. Hierbei liegt $L_1$ um $1.7\%$ und $L_2$ um $3.3\%$ vom Erwartungswert ab. 
+Der Winkelunterschied ist mit $\Delta\varphi = |\varphi_2 - \varphi_1 | = \SI{121.4(4)}{\degree}$ bis auf ein Grad an dem erwarteten Winkel von $\SI{120}{\degree}$ und weicht um weniger als $1\%$ von dem erwarteten Wert ab.
+
+Die elektronische Struktur von HOPG ließ sich visuell gut darstellen. Die erwarteten Atomabstände konnten nicht exakt gefunden werden, wobei in beide Richtungen Abweichungen um wenige Prozent über dem Erwartungswert. Dies deutet auf eine leichte Fehlkalibration des STM hin, beispielsweise hervorgerufen durch Hysterese oder thermische dekalibration der Piezoelemente. \todo{mehr labern; maybe thermische expansion vom hopg} \todo{labern über winkel. gut aber bla}
+
